# restic-profile

./: .ansible-lint  .copier-answers.yaml  .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  ansible.cfg  galaxy.yml  justfile  mkdocs.yml  pyproject.toml  requirements.yaml  requirements.yml  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml
docs/: ansible-toolchain.md  ansible-toolchain.zh.md  index.md  index.zh.md  restic-rest-server.md  restic-rest-server.zh.md
docs/restic-profile/: ansible.md  cli.md  cli.zh.md  config.md  examples.md  examples.zh.md  profiles.md  toml-config.md  toml-config.zh.md
docs/restic-rest-server/: ansible.md  examples.md  index.md
playbooks/: restic-profile.yaml  restic-rest-server.yaml
playbooks/go_build/: restic-rest-server.yaml  restic.yaml
plugins/filter/: restic_profile.py
plugins/modules/: systemd_timer_state.py
roles/go_build/: README.md
roles/go_build/defaults/: main.yaml
roles/go_build/tasks/: main.yaml
roles/pyproject_install/defaults/: main.yaml
roles/pyproject_install/molecule/default/: converge.yaml  molecule.yaml  prepare.yaml  verify.yaml
roles/pyproject_install/tasks/: from_pypi.yaml  local_wheel.yaml  main.yaml
roles/pyproject_install/vars/: main.yaml
roles/restic_profile/defaults/: main.yaml
roles/restic_profile/files/: restic-profile-select.bash  restic.sh
roles/restic_profile/handlers/: main.yaml
roles/restic_profile/meta/: main.yaml
roles/restic_profile/molecule/default/: converge.yaml  molecule.yaml  prepare.yaml  verify.yaml
roles/restic_profile/tasks/: _config_target.yaml  _remove_target.yaml  _service_target.yaml  cleanup_orphans.yaml  config.yaml  hooks.yaml  hooks_phase.yaml  install.yaml  main.yaml  persist_registry.yaml  preflight.yaml  remove.yaml  service.yaml
roles/restic_profile/templates/etc/restic-profile/: restic-profile.env.j2  restic-profile.toml.j2
roles/restic_profile/templates/etc/systemd/system/: restic-profile.service.j2  restic-profile.timer.j2
roles/restic_profile/vars/: main.yaml
roles/restic_rest_server/defaults/: main.yaml
roles/restic_rest_server/files/: users.htpasswd
roles/restic_rest_server/handlers/: main.yaml
roles/restic_rest_server/meta/: main.yaml
roles/restic_rest_server/tasks/: install.yaml  main.yaml  service.yaml  validation.yaml
roles/restic_rest_server/templates/: restic-rest-server.default.j2  restic-rest-server.service.j2
src/restic_profile/: __init__.py  __main__.py  cli.py  config.py  notify.py  runner.py
src/restic_profile/templates/: notify_failure.md.j2  notify_success.md.j2
tests/restic_profile/: conftest.py  test_cli.py  test_config.py  test_filters.py  test_notify.py  test_runner.py  test_selector_script.py
