[project]
name = "restic-profile"
dynamic = ["version"]
description = "Profile-based restic wrapper with Ansible deployment support"
authors = [{ name = "ak1ra", email = "git@ak1ra.xyz" }]
dependencies = [
    "argcomplete>=3.6.3",
    "chaos-utils>=0.4.1",
    "pydantic>=2.13.3",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["restic", "backup", "ansible"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"

[project.scripts]
restic-profile = "restic_profile.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/restic_profile"]

[dependency-groups]
tests = ["pytest>=8.3.5", "pytest-cov>=6.0.0"]
lint = ["ruff>=0.11.0", "ty>=0.0.1a16"]
docs = ["zensical>=0.0.29", "mkdocstrings-python>=2.0.3"]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
    { include-group = "docs" },
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
