[project]
name = "restic-profile"
dynamic = ["version"]
description = "Profile-based restic wrapper with Ansible deployment support"
authors = [{ name = "ak1ra", email = "git@ak1ra.xyz" }]
dependencies = [
    "argcomplete>=3.7.0",
    "chaos-utils>=0.4.1",
    "pydantic>=2.13.3",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["restic", "backup", "ansible"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"

[project.urls]
Homepage = "https://github.com/ak1ra-lab/restic-profile"
Repository = "https://github.com/ak1ra-lab/restic-profile"
Documentation = "https://ak1ra-lab.github.io/restic-profile/"

[project.scripts]
restic-profile = "restic_profile.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/restic_profile"]

[dependency-groups]
tests = ["pytest>=9.1.1", "pytest-cov>=7.1.0"]
lint = ["ruff>=0.15.20", "ty>=0.0.56"]
docs = ["zensical>=0.0.46", "mkdocstrings-python>=2.0.5"]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
    { include-group = "docs" },
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
